# explorer_duckdb_backend

./: .gitignore  README.md  mix.exs
bench/: benchmark.exs
lib/: explorer_duckdb_backend.ex
lib/explorer_duckdb/: application.ex  connection.ex  data_frame.ex  lazy_frame.ex  native.ex  query_builder.ex  series.ex  shared.ex  sql_builder.ex  sql_helpers.ex
native/explorer_duckdb/: Cargo.toml
native/explorer_duckdb/src/: database.rs  dataframe.rs  error.rs  lib.rs  series.rs  temp_table.rs  types.rs
test/explorer_duckdb/: adversarial_test.exs  arrow_vtab_test.exs  categories_test.exs  config_test.exs  connection_genserver_test.exs  connection_test.exs  data_frame_comprehensive_test.exs  data_frame_test.exs  full_coverage_test.exs  io_options_test.exs  io_test.exs  ipc_test.exs  lazy_frame_test.exs  lifecycle_test.exs  newly_implemented_test.exs  query_builder_test.exs  robustness_test.exs  series_comprehensive_test.exs  series_test.exs  sql_builder_test.exs  stress_test.exs
